--- a/package.json
+++ b/package.json
@@ -24,8 +24,14 @@
     "@ionic-native/splash-screen": "5.0.0-beta.21",
     "@ionic-native/status-bar": "5.0.0-beta.21",
     "@ionic/angular": "4.0.0-beta.13",
+    "@ionic/storage": "^2.2.0",
+    "@ngrx/effects": "^6.1.0",
+    "@ngrx/router": "^1.0.0-beta.2",
+    "@ngrx/store": "^6.1.0",
+    "cordova-sqlite-storage": "2.5.0",
     "core-js": "^2.5.3",
     "rxjs": "6.2.2",
+    "tassign": "^1.0.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
@@ -38,6 +44,7 @@
     "@angular/compiler-cli": "~6.1.1",
     "@angular/language-service": "~6.1.1",
     "@ionic/angular-toolkit": "^1.0.0",
+    "@ionic/lab": "1.0.11",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~10.11.3",
@@ -54,5 +61,10 @@
     "tslint": "~5.11.0",
     "typescript": "~2.9.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-sqlite-storage": {}
+    }
+  }
 }
